visibility fix for smaller phones

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -395,7 +395,7 @@ html.win-hoverable .win-listview .win-container:hover, html.win-hoverable .win-i
         float: left;
         &.linear {
             width: 100%;
-            margin: 0;
+            margin: 0 0 30px 0;
             .fact {
                 width: 100%;
                 margin-bottom: 15px;
